Update common-jvm-arguments.md